<resources>
<<<<<<< HEAD
    <string name="app_name">fortesting</string>
    <string name="ek_img_content">ExportKit Image</string>
	<string name="care_of_magical_string">Care of Basic</string>
	<string name="creatures_string">Creatures</string>
	<string name="explore_the_unique_behaviors_and_habitats_string">Explore the unique behaviors and habitats </string>
	<string name="of_the_wizarding_world_s_diverse_faunas_string">of the wizarding worlds diverse faunas </string>
	<string name="and_learn_to_care_for_them_in_this_hands__string">And learn to care for them in this hands-</string>
	<string name="on_course__string">on course.</string>
	<string name="open_all_string">Open All</string>
	<string name="close_all_string">Close All</string>
	<string name="lecture_notes_string">Lecture Notes</string>
	<string name="coursework_string">Coursework</string>
	<string name="miscellaneous_string">Miscellaneous</string>
	<string name="dashboard_desc_label_string">Dashboard</string>
	<string name="results_desc_label_string">Results</string>
	<string name="calendar_desc_label_string">Calendar</string>
=======
    <string name="app_name">Madprojectfinal</string>
>>>>>>> 4ea4c893c9bd0871e4c05781328212c4fea371a4
</resources>