<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraintLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<com.google.android.material.bottomnavigation.BottomNavigationView
		android:id="@+id/bottomNavigationView"
		android:layout_width="0dp"
		android:layout_height="80dp"
		android:background="@drawable/bottom_nav_bar_shape_background"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:menu="@menu/bottom_nav_bar_menu">

	</com.google.android.material.bottomnavigation.BottomNavigationView>


	<TextView
		android:id="@+id/creatures"
		android:layout_width="318.5dp"
		android:layout_height="69.5dp"
		android:fontFamily="Sedan SC"
		android:text="@string/creatures_string"
		android:textColor="@color/care_of_magical_color"
		android:textSize="35sp"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="112dp" />

	<TextView
		android:id="@+id/and_learn_to_care_for_them_in_this_hands_"
		android:layout_width="333.5dp"
		android:layout_height="30.5dp"
		android:fontFamily="Sedan SC"
		android:text="@string/and_learn_to_care_for_them_in_this_hands__string"
		android:textColor="@color/care_of_magical_color"
		android:textSize="15sp"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="207dp" />

	<TextView
		android:id="@+id/explore_the_unique_behaviors_and_habitats"
		android:layout_width="333.5dp"
		android:layout_height="30.5dp"
		android:fontFamily="Sedan SC"
		android:text="@string/explore_the_unique_behaviors_and_habitats_string"
		android:textColor="@color/care_of_magical_color"
		android:textSize="15sp"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="168dp" />

	<TextView
		android:id="@+id/of_the_wizarding_world_s_diverse_faunas"
		android:layout_width="333.5dp"
		android:layout_height="29.5dp"
		android:fontFamily="Sedan SC"
		android:text="@string/of_the_wizarding_world_s_diverse_faunas_string"
		android:textColor="@color/care_of_magical_color"
		android:textSize="15sp"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="188dp" />

	<TextView
		android:id="@+id/care_of_magical"
		android:layout_width="318.5dp"
		android:layout_height="69.5dp"
		android:fontFamily="Sedan SC"
		android:text="@string/care_of_magical_string"
		android:textColor="@color/care_of_magical_color"
		android:textSize="35sp"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="77dp" />

	<TextView
		android:id="@+id/on_course_"
		android:layout_width="333.5dp"
		android:layout_height="29.5dp"
		android:fontFamily="Sedan SC"
		android:text="@string/on_course__string"
		android:textColor="@color/care_of_magical_color"
		android:textSize="15sp"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="227dp" />

	<include
		android:id="@+id/nav_bar"
		layout="@layout/top_nav_bar_menu"
		android:layout_width="0dp"
		android:layout_height="80dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>